--- a/devwidgets/notice/pages/css/sakai.news.css
+++ b/devwidgets/notice/pages/css/sakai.news.css
@@ -142,7 +142,7 @@
     text-align: left; 
     font-size: 1em; 
     border-bottom: 1px solid #d5dbdf; 
-    border-left: 1px solid #d5dbdf; 
+    /*    border-left: 1px solid #d5dbdf; */
     padding: 0.5em;
 }
 
